// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`wxs > inline wxs content extract 1`] = `
[
  "

	var className = 'after:content-[\\\\'我来自inline-wxs\\\\']'
  module.exports = {
    className: className
  }

",
  "
/* eslint-disable */


var className = 'after:content-[\\\\'我来自outside-wxs\\\\']'
module.exports = {
  className: className
}
",
]
`;

exports[`wxs > inline wxs content extract and escape 1`] = `
[
  "var className = \\"afterccontent-_qu6211u6765u81eainline-wxsq_\\";
module.exports = {
  className: className
};",
  "/* eslint-disable */

var className = \\"afterccontent-_qu6211u6765u81eaoutside-wxsq_\\";
module.exports = {
  className: className
};",
]
`;

exports[`wxs > inline wxs content extract and escape and replace 1`] = `
"<wxs module=\\"inline\\">var className = \\"afterccontent-_qu6211u6765u81eainline-wxsq_\\";
module.exports = {
  className: className
};</wxs>
<wxs module=\\"outside\\">/* eslint-disable */

var className = \\"afterccontent-_qu6211u6765u81eaoutside-wxsq_\\";
module.exports = {
  className: className
};</wxs>
<view class=\\"beforeccontent-_qmoduleA_u72ecu7acbu5206u5305q_\\">
  <view class=\\"{{inline.className}}\\"></view>
  <view class=\\"{{outside.className}}\\"></view>
</view>"
`;

exports[`wxs > outside wxs content extract and escape 1`] = `
[
  "var className = \\"afterccontent-_qu6211u6765u81eainline-wxsq_\\";
module.exports = {
  className: className
};",
]
`;

exports[`wxs > simple.wxs content extract and escape 1`] = `
"/* eslint-disable */

var className = \\"afterccontent-_qu6211u6765u81eaoutside-wxsq_\\";
module.exports = {
  className: className
};"
`;
